hphp/hack/test/typecheck/reactive/owned_mutable8.php.exp
File "owned_mutable8.php", line 5, characters 21-42:
__OwnedMutable annotated parameters are only allowed in reactive functions. (Parsing[1002])
