hphp/hack/test/typecheck/reactive/owned_mutable8.php
<?hh // partial

class A {
  // ERROR
  public function f(<<__OwnedMutable>> A $a) {
  }
}
